--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -1,8 +1,14 @@
-FROM golang:latest
+FROM golang:1.13.5
 ENV GOPATH /go
 ENV PATH $PATH:$GOPATH/bin
+
 RUN mkdir -p /go/src/github.com/riita10069/echo_base_code
 COPY . /go/src/github.com/riita10069/echo_base_code
 WORKDIR /go/src/github.com/riita10069/echo_base_code
+ENV PATH $PATH:/go/src/github.com/riita10069/echo_base_code
 ENV GO111MODULE=on
+RUN go mod tidy
+RUN go get -v github.com/rubenv/sql-migrate/...
+
+EXPOSE 8000
 CMD ["go", "run", "main.go"]
