--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,7 +24,7 @@ services:
     environment:
       MYSQL_USER: root
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_PASSWORD: passrod
+      MYSQL_PASSWORD: password
       MYSQL_DATABASE: test
     volumes:
       - ./db_data:/var/lib/mysql
