--- a/Dockerfile_dev
+++ b/Dockerfile_dev
@@ -11,4 +11,4 @@ RUN go mod tidy
 RUN go get -v github.com/rubenv/sql-migrate/...
 
 EXPOSE 8000
-CMD ["go", "run", "main.go"]
+# CMD ["go", "run", "main.go"]
